test/111.txt
lexer.cpp:540:84: warning: missing terminating ' character
  540 |                         cout << line << '       ' << buf_err << '       ' << -1 << '
      |                                                                                    ^
lexer.cpp:540:84: error: missing terminating ' character
lexer.cpp:541:1: warning: missing terminating ' character
  541 | ';
      | ^
lexer.cpp:541:1: error: missing terminating ' character
  541 | ';
      | ^~
lexer.cpp:554:85: warning: missing terminating ' character
  554 |                 cout << line << '       ' << buf_suc << '       ' << currentCode << '
      |                                                                                     ^
lexer.cpp:554:85: error: missing terminating ' character
lexer.cpp:555:1: warning: missing terminating ' character
  555 | ';
      | ^
lexer.cpp:555:1: error: missing terminating ' character
  555 | ';
      | ^~
lexer.cpp: In function 'int main(int, char**)':
lexer.cpp:540:81: error: no match for 'operator<<' (operand types are 'std::basic_ostream<char>' and 'void')
  540 |                         cout << line << '       ' << buf_err << '       ' << -1 << '
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~
      |                                                                           |
      |                                                                           std::basic_ostream<char>
  541 | ';
  542 |                         exit(1);
      |                         ~~~~~~~
      |                             |
      |                             void
lexer.cpp:540:81: note: there are 33 candidates
  540 |                         cout << line << '       ' << buf_err << '       ' << -1 << '
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
  541 | ';
      | ~~
  542 |                         exit(1);
      |                         ~~~~~~~
In file included from D:/msys64/ucrt64/include/c++/15.2.0/ostream:42,
                 from D:/msys64/ucrt64/include/c++/15.2.0/iostream:43,
                 from lexer.cpp:1:
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:116:7: note: candidate 1: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(__ostream_type& (*)(__ostream_type&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  116 |       operator<<(__ostream_type& (*__pf)(__ostream_type&))
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:116:36: note: no known conversion for argument 1 from 'void' to 'std::basic_ostream<char>::__ostream_type& (*)(std::basic_ostream<char>::__ostream_type&)' {aka 'std::basic_ostream<char>& (*)(std::basic_ostream<char>&)'}
  116 |       operator<<(__ostream_type& (*__pf)(__ostream_type&))
      |                  ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:125:7: note: candidate 2: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(__ios_type& (*)(__ios_type&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>; __ios_type = std::basic_ios<char>]'
  125 |       operator<<(__ios_type& (*__pf)(__ios_type&))
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:125:32: note: no known conversion for argument 1 from 'void' to 'std::basic_ostream<char>::__ios_type& (*)(std::basic_ostream<char>::__ios_type&)' {aka 'std::basic_ios<char>& (*)(std::basic_ios<char>&)'}
  125 |       operator<<(__ios_type& (*__pf)(__ios_type&))
      |                  ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:135:7: note: candidate 3: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(std::ios_base& (*)(std::ios_base&)) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  135 |       operator<<(ios_base& (*__pf) (ios_base&))
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:135:30: note: no known conversion for argument 1 from 'void' to 'std::ios_base& (*)(std::ios_base&)'
  135 |       operator<<(ios_base& (*__pf) (ios_base&))
      |                  ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:174:7: note: candidate 4: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  174 |       operator<<(long __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:174:23: note: no known conversion for argument 1 from 'void' to 'long int'
  174 |       operator<<(long __n)
      |                  ~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:178:7: note: candidate 5: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  178 |       operator<<(unsigned long __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:178:32: note: no known conversion for argument 1 from 'void' to 'long unsigned int'
  178 |       operator<<(unsigned long __n)
      |                  ~~~~~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:182:7: note: candidate 6: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(bool) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  182 |       operator<<(bool __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:182:23: note: no known conversion for argument 1 from 'void' to 'boo'
  182 |       operator<<(bool __n)
      |                  ~~~~~^~~
In file included from D:/msys64/ucrt64/include/c++/15.2.0/ostream:294:
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:100:5: note: candidate 7: 'std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(short int) [with _CharT = char; _Traits = std::char_traits<char>]'
  100 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:101:22: note: no known conversion for argument 1 from 'void' to 'short int'
  101 |     operator<<(short __n)
      |                ~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:189:7: note: candidate 8: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(short unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  189 |       operator<<(unsigned short __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:189:33: note: no known conversion for argument 1 from 'void' to 'short unsigned int'
  189 |       operator<<(unsigned short __n)
      |                  ~~~~~~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:114:5: note: candidate 9: 'std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(int) [with _CharT = char; _Traits = std::char_traits<char>]'
  114 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:115:20: note: no known conversion for argument 1 from 'void' to 'int'
  115 |     operator<<(int __n)
      |                ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:200:7: note: candidate 10: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  200 |       operator<<(unsigned int __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:200:31: note: no known conversion for argument 1 from 'void' to 'unsigned int'
  200 |       operator<<(unsigned int __n)
      |                  ~~~~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:211:7: note: candidate 11: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long long int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  211 |       operator<<(long long __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:211:28: note: no known conversion for argument 1 from 'void' to 'long long int'
  211 |       operator<<(long long __n)
      |                  ~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:215:7: note: candidate 12: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long long unsigned int) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  215 |       operator<<(unsigned long long __n)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:215:37: note: no known conversion for argument 1 from 'void' to 'long long unsigned int'
  215 |       operator<<(unsigned long long __n)
      |                  ~~~~~~~~~~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:231:7: note: candidate 13: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(double) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  231 |       operator<<(double __f)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:231:25: note: no known conversion for argument 1 from 'void' to 'double'
  231 |       operator<<(double __f)
      |                  ~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:235:7: note: candidate 14: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(float) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  235 |       operator<<(float __f)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:235:24: note: no known conversion for argument 1 from 'void' to 'float'
  235 |       operator<<(float __f)
      |                  ~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:243:7: note: candidate 15: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(long double) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  243 |       operator<<(long double __f)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:243:30: note: no known conversion for argument 1 from 'void' to 'long double'
  243 |       operator<<(long double __f)
      |                  ~~~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:301:7: note: candidate 16: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(const void*) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>]'
  301 |       operator<<(const void* __p)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:301:30: note: no known conversion for argument 1 from 'void' to 'const void*'
  301 |       operator<<(const void* __p)
      |                  ~~~~~~~~~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:306:7: note: candidate 17: 'std::basic_ostream<_CharT, _Traits>::__ostream_type& std::basic_ostream<_CharT, _Traits>::operator<<(std::nullptr_t) [with _CharT = char; _Traits = std::char_traits<char>; __ostream_type = std::basic_ostream<char>; std::nullptr_t = std::nullptr_t]'
  306 |       operator<<(nullptr_t)
      |       ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:306:18: note: no known conversion for argument 1 from 'void' to 'std::nullptr_t'
  306 |       operator<<(nullptr_t)
      |                  ^~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:128:5: note: candidate 18: 'std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(__streambuf_type*) [with _CharT = char; _Traits = std::char_traits<char>; __streambuf_type = std::basic_streambuf<char>]'
  128 |     basic_ostream<_CharT, _Traits>::
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:129:34: note: no known conversion for argument 1 from 'void' to 'std::basic_ostream<char>::__streambuf_type*' {aka 'std::basic_streambuf<char>*'}
  129 |     operator<<(__streambuf_type* __sbin)
      |                ~~~~~~~~~~~~~~~~~~^~~~~~
In file included from D:/msys64/ucrt64/include/c++/15.2.0/bits/basic_string.h:51,
                 from D:/msys64/ucrt64/include/c++/15.2.0/string:56,
                 from D:/msys64/ucrt64/include/c++/15.2.0/bits/locale_classes.h:42,
                 from D:/msys64/ucrt64/include/c++/15.2.0/bits/ios_base.h:43,
                 from D:/msys64/ucrt64/include/c++/15.2.0/ios:46,
                 from D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:43:
D:/msys64/ucrt64/include/c++/15.2.0/string_view:767:5: note: candidate 19: 'template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, basic_string_view<_CharT, _Traits>)'
  767 |     operator<<(basic_ostream<_CharT, _Traits>& __os,
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/string_view:767:5: note: template argument deduction/substitution failed:
lexer.cpp:542:31: note:   mismatched types 'std::basic_string_view<_CharT, _Traits>' and 'void'
  542 |                         exit(1);
      |                               ^
D:/msys64/ucrt64/include/c++/15.2.0/bits/basic_string.h:4367:5: note: candidate 20: 'template<class _CharT, class _Traits, class _Alloc> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const __cxx11::basic_string<_CharT, _Traits, _Alloc>&)'
 4367 |     operator<<(basic_ostream<_CharT, _Traits>& __os,
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/basic_string.h:4367:5: note: template argument deduction/substitution failed:
lexer.cpp:542:31: note:   mismatched types 'const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>' and 'void'
  542 |                         exit(1);
      |                               ^
In file included from D:/msys64/ucrt64/include/c++/15.2.0/bits/memory_resource.h:40,
                 from D:/msys64/ucrt64/include/c++/15.2.0/string:72:
D:/msys64/ucrt64/include/c++/15.2.0/cstddef:130:5: note: candidate 21: 'template<class _IntegerType> constexpr std::__byte_op_t<_IntegerType> std::operator<<(byte, _IntegerType)'
  130 |     operator<<(byte __b, _IntegerType __shift) noexcept
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/cstddef:130:5: note: template argument deduction/substitution failed:
lexer.cpp:540:75: note:   cannot convert '(& std::operator<< <char_traits<char> >((* & std::operator<< <char, char_traits<char>, allocator<char> >((* & std::operator<< <char_traits<char> >((* & std::cout.std::basic_ostream<char>::operator<<(line)), 9)), buf_err)), 9))->std::basic_ostream<char>::operator<<(-1)' (type 'std::basic_ostream<char>') to type 'std::byte'
  540 |                         cout << line << '       ' << buf_err << '       ' << -1 << '
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from D:/msys64/ucrt64/include/c++/15.2.0/bits/ios_base.h:48:
D:/msys64/ucrt64/include/c++/15.2.0/system_error:341:5: note: candidate 22: 'template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const error_code&)'
  341 |     operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/system_error:341:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'const std::error_code&'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:626:5: note: candidate 23: 'template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, _CharT)'
  626 |     operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:626:5: note: template argument deduction/substitution failed:
lexer.cpp:542:31: note:   deduced conflicting types for parameter '_CharT' ('char' and 'void')
  542 |                         exit(1);
      |                               ^
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:636:5: note: candidate 24: 'template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, char)'
  636 |     operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:636:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'char'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:642:5: note: candidate 25: 'template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, char)'
  642 |     operator<<(basic_ostream<char, _Traits>& __out, char __c)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:642:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'char'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:653:5: note: candidate 26: 'template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, signed char)'
  653 |     operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:653:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'signed char'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:658:5: note: candidate 27: 'template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, unsigned char)'
  658 |     operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:658:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'unsigned char'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:717:5: note: candidate 28: 'template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const _CharT*)'
  717 |     operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:717:5: note: template argument deduction/substitution failed:
lexer.cpp:542:31: note:   mismatched types 'const _CharT*' and 'void'
  542 |                         exit(1);
      |                               ^
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:311:5: note: candidate 29: 'template<class _CharT, class _Traits> std::basic_ostream<_CharT, _Traits>& std::operator<<(basic_ostream<_CharT, _Traits>&, const char*)'
  311 |     operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.tcc:311:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'const char*'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:734:5: note: candidate 30: 'template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const char*)'
  734 |     operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:734:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'const char*'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:747:5: note: candidate 31: 'template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const signed char*)'
  747 |     operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:747:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'const signed char*'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:752:5: note: candidate 32: 'template<class _Traits> std::basic_ostream<char, _Traits>& std::operator<<(basic_ostream<char, _Traits>&, const unsigned char*)'
  752 |     operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:752:5: note: template argument deduction/substitution failed:
lexer.cpp:542:29: note:   cannot convert 'exit(1)' (type 'void') to type 'const unsigned char*'
  542 |                         exit(1);
      |                         ~~~~^~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:836:5: note: candidate 33: 'template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&)'
  836 |     operator<<(_Ostream&& __os, const _Tp& __x)
      |     ^~~~~~~~
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:836:5: note: template argument deduction/substitution failed:
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h: In substitution of 'template<class _Ostream, class _Tp> _Ostream&& std::operator<<(_Ostream&&, const _Tp&) [with _Ostream = std::basic_ostream<char>&; _Tp = void]':
lexer.cpp:542:10:   required from here
  542 |                         exit(1);
      |                               ^
D:/msys64/ucrt64/include/c++/15.2.0/bits/ostream.h:836:5: error: no type named 'type' in 'struct std::enable_if<false, void>'
  836 |     operator<<(_Ostream&& __os, const _Tp& __x)
      |     ^~~~~~~~
lexer.cpp:556:26: error: no match for 'operator+=' (operand types are 'std::basic_ostream<char>' and 'std::__cxx11::basic_string<char>::size_type' {aka 'long long unsigned int'})
  554 |                 cout << line << '       ' << buf_suc << '       ' << currentCode << '
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  555 | ';
      | ~~
  556 |                 read_cnt += buf_suc.size();
      |                 ~~~~~~~~~^~~~~~~~~~~~~~~~~